[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pdm]
distribution = false

[tool.pdm.build]
includes = []

[[tool.pdm.source]]
name = "mirrors"
url = "http://mirrors.cloud.tencent.com/pypi/simple/"
verify_ssl = false

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file=["requirements-dev.txt"]}

[project.urls]
repository = "https://github.com/fengzhongzhu1621/xTool"

[project]
name = "xTool"
version = "0.2.0"
description = "Python Study Notes"
authors = [
    {name = "fengzhongzhu1621", email = "jinyinqiao@gmail.com"},
]
dependencies = [
    "django<5.0,>=4.2",
    "djangorestframework<4.0.0,>=3.15.1",
    "drf-yasg<2.0.0,>=1.21.7",
    "drf-spectacular<1.0.0,>=0.27.2",
    "django-filter<25.0,>=24.2",
    "django-cors-headers<5.0.0,>=4.3.1",
    "django-cors-middleware<2.0.0,>=1.5.0",
    "django-redis<6.0.0,>=5.4.0",
    "django-environ<1.0.0,>=0.11.2",
    "django-celery-beat<3.0.0,>=2.6.0",
    "django-celery-results<3.0.0,>=2.5.1",
    "celery<6.0.0,>=5.4.0",
    "django-versionlog<2.0.0,>=1.8.1",
    "django-mptt<1.0.0,>=0.16.0",
    "django-mptt-admin<3.0.0,>=2.6.2",
    "whitenoise<7.0.0,>=6.6.0",
    "django-prometheus<3.0.0,>=2.3.1",
    "opentelemetry-instrumentation-elasticsearch<1.0,>=0.45b0",
    "opentelemetry-instrumentation-logging<1.0,>=0.45b0",
    "opentelemetry-instrumentation-celery<1.0,>=0.45b0",
    "opentelemetry-instrumentation-requests<1.0,>=0.45b0",
    "opentelemetry-instrumentation-redis<1.0,>=0.45b0",
    "opentelemetry-instrumentation-dbapi<1.0,>=0.45b0",
    "opentelemetry-instrumentation-django<1.0,>=0.45b0",
    "opentelemetry-instrumentation<1.0,>=0.45b0",
    "opentelemetry-exporter-jaeger<2.0.0,>=1.21.0",
    "opentelemetry-exporter-otlp<2.0.0,>=1.24.0",
    "uvicorn<1.0.0,>=0.29.0",
    "jsondiff<3.0.0,>=2.0.0",
    "mysqlclient<3.0.0,>=2.2.4",
    "openpyxl<4.0.0,>=3.1.2",
    "ipy<2.0,>=1.1",
    "excelrd<4.0.0,>=3.0.0",
    "tenacity<9.0.0,>=8.3.0",
    "dacite<2.0.0,>=1.8.1",
    "pydantic<3.0.0,>=2.7.1",
    "uhashring<3.0,>=2.3",
    "pygments<3.0.0,>=2.18.0",
    "markdown<4.0,>=3.6",
    "pymysql<2.0.0,>=1.1.1",
    "curlify<3.0.0,>=2.2.1",
    "tzlocal<6.0,>=5.2",
    "python-snappy<1.0.0,>=0.7.1",
    "statsd<5.0.0,>=4.0.1",
    "typing-extensions<5.0.0,>=4.12.0",
    "netifaces<1.0.0,>=0.11.0",
    "aiohttp<4.0.0,>=3.9.5",
    "beautifulsoup4<5.0.0,>=4.12.3",
    "ipaddress<2.0.0,>=1.0.23",
    "trio<1.0.0,>=0.25.1",
    "httpx<1.0.0,>=0.27.0",
    "gunicorn<23.0.0,>=22.0.0",
    "httptools<1.0.0,>=0.6.1",
    "multidict<7.0.0,>=6.0.5",
    "cryptography<43.0.0,>=42.0.7",
    "cython<4.0.0,>=3.0.10",
    "tabulate<1.0.0,>=0.9.0",
    "croniter<3.0.0,>=2.0.5",
    "pendulum<4.0.0,>=3.0.0",
    "jinja2<4.0.0,>=3.1.4",
    "psutil<6.0.0,>=5.9.8",
    "numpy<2.0.0,>=1.26.4",
    "pyparsing<4.0.0,>=3.1.2",
    "lark<2.0.0,>=1.1.9",
    "pydot<3.0.0,>=2.0.0",
    "graphviz<1.0.0,>=0.20.3",
    "pydotplus<3.0.0,>=2.0.2",
    "pyinstrument<5.0.0,>=4.6.2",
    "json-log-formatter<2.0,>=1.0",
    "ujson<6.0.0,>=5.10.0",
    "orjson<4.0.0,>=3.10.3",
    "shortuuid<2.0.0,>=1.0.13",
    "pypinyin<1.0.0,>=0.51.0",
    "python-magic<1.0.0,>=0.4.27",
    "xpinyin<1.0.0,>=0.7.6",
    "html5lib<2.0,>=1.1",
    "pyjwt<3.0.0,>=2.8.0",
    "django-comment-migrate<1.0.0,>=0.1.7",
    "django-restql<1.0.0,>=0.15.4",
    "django-simple-captcha<1.0.0,>=0.6.0",
    "djangorestframework-simplejwt<6.0.0,>=5.3.1",
    "ua-parser<1.0.0,>=0.18.0",
    "channels-redis<5.0.0,>=4.2.0",
    "user-agents<3.0.0,>=2.2.0",
    "dvadmin-celery<2.0.0,>=1.0.5",
    "arrow<2.0.0,>=1.3.0",
    "werkzeug<4.0.0,>=3.0.3",
    "bk-iam<2.0.0,>=1.3.6",
    "django-rest-framework-condition<1.0.0,>=0.1.1",
    "aiocron<2.0,>=1.8",
    "sanic<24.0.0,>=23.12.1",
    "speaklater<2.0,>=1.3",
    "channels<5.0.0,>=4.1.0",
    "async-timeout<5.0.0,>=4.0.3",
    "daphne<5.0.0,>=4.1.2",
    "cycler<1.0.0,>=0.12.1",
]
requires-python = "<4.0,>=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = ["Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License", "Natural Language :: English", "Environment :: Console", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.10",]

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit<4.0.0,>=3.7.1",
    "pytest<9.0.0,>=8.2.1",
    "flake8<8.0.0,>=7.0.0",
    "isort<6.0.0,>=5.13.2",
    "pyproject-flake8<8.0.0,>=7.0.0",
    "attrs<24.0.0,>=23.2.0",
    "coverage<8.0.0,>=7.5.1",
    "mock<6.0.0,>=5.1.0",
    "pycodestyle<3.0.0,>=2.11.1",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-django<5.0.0,>=4.8.0",
    "pytest-dotenv<1.0.0,>=0.5.2",
    "pytest-env<2.0.0,>=1.1.3",
    "pytest-html<5.0.0,>=4.1.1",
    "pytest-mock<4.0.0,>=3.14.0",
    "pytest-xdist<4.0.0,>=3.6.1",
    "fakeredis<3.0.0,>=2.23.2",
    "xmlrunner<2.0.0,>=1.7.7",
    "et-xmlfile<2.0.0,>=1.1.0",
    "mypy<2.0.0,>=1.10.0",
    "black<25.0.0,>=24.4.2",
    "hypothesis<7.0.0,>=6.102.6",
    "mockafka-py<1.0.0,>=0.1.55",
    "pytest-helpers-namespace<2022.0.0,>=2021.12.29",
    "pytest-asyncio<1.0.0,>=0.23.7",
]
