[tool.black]
line-length = 120
target_version = ['py36', 'py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
skip-string-normalization = 'true'
exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | _build
  | \.ypy-cov
  | \.tox
  | \._black
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = 'true'
force_grid_wrap = 0
use_parentheses = 'true'
line_length = 120
skip_glob = ["*/node_modules/**", "*/migrations/**"]

[tool.setuptools.packages.find]
exclude = ["tests*", "apps/tests*"]

[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file=["requirements-dev.txt"]}


[tool.pdm]
[project]
name = "xTool"
version = "0.2.0"
description = "A python script tools"
authors = [
    {name = "fengzhongzhu1621", email = "jinyinqiao@gmail.com"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache License 2.0"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
]
dependencies = [
    "django<5.0, >=4.2",
    "djangorestframework<4.0.0,>=3.15.1",
    "drf-yasg<2.0.0,>=1.21.7",
    "drf-spectacular<1.0.0,>=0.27.2",
    "django-filter<25.0,>=24.2",
    "django-cors-headers<5.0.0,>=4.3.1",
    "django-cors-middleware<2.0.0,>=1.5.0",
    "django-redis<6.0.0,>=5.4.0",
    "django-environ<1.0.0,>=0.11.2",
    "django-celery-beat<3.0.0,>=2.6.0",
    "django-celery-results<3.0.0,>=2.5.1",
    "celery<6.0.0,>=5.4.0",
    "django-versionlog<2.0.0,>=1.8.1",
    "django-mptt<1.0.0,>=0.16.0",
    "django-mptt-admin<3.0.0,>=2.6.2",
    "whitenoise<7.0.0,>=6.6.0",
    "protobuf>=5.0",
    "opentelemetry-api<2.0.0,>=1.25.0",
    "opentelemetry-sdk<2.0.0,>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-exporter-otlp-proto-http<2.0.0,>=1.25.0",
    "opentelemetry-semantic-conventions<1.0,>=0.46b0",
    "opentelemetry-instrumentation-django<1.0,>=0.46b0",
    "opentelemetry-instrumentation-elasticsearch<1.0,>=0.46b0",
    "opentelemetry-instrumentation-dbapi<1.0,>=0.46b0",
    "opentelemetry-instrumentation-redis<1.0,>=0.46b0",
    "opentelemetry-instrumentation-requests<1.0,>=0.46b0",
    "opentelemetry-instrumentation-celery<1.0,>=0.46b0",
    "opentelemetry-instrumentation-logging<1.0,>=0.46b0",
    "django-prometheus<3.0.0,>=2.3.1",
    "bk-iam<2.0.0,>=1.3.6",
    "bk-audit[opentelemetry]==1.2.2b0",
    "pypinyin<1.0.0,>=0.51.0",
    "ftfy<7.0.0,>=6.2.0",
    "cachetools<6.0.0,>=5.3.3",
    "ujson==5.4.0",
    "jsondiff<3.0.0,>=2.0.0",
    "mysqlclient<3.0.0,>=2.2.4",
    "openpyxl<4.0.0,>=3.1.2",
    "ipy<2.0,>=1.1",
    "excelrd<4.0.0,>=3.0.0",
    "tenacity<9.0.0,>=8.3.0",
    "dacite<2.0.0,>=1.8.1",
    "pydantic<3.0.0,>=2.7.1",
    "uhashring<3.0,>=2.3",
    "pygments<3.0.0,>=2.18.0",
    "markdown<4.0,>=3.6",
    "pymysql<2.0.0,>=1.1.1",
    "curlify<3.0.0,>=2.2.1",
    "tzlocal<6.0,>=5.2",
    "python-snappy<1.0.0,>=0.7.1",
    "statsd<5.0.0,>=4.0.1",
    "typing-extensions<5.0.0,>=4.12.0",
    "netifaces>=0.11.0",
    "aiohttp>=3.9.5",
    "beautifulsoup4<5.0.0,>=4.12.3",
    "ipaddress<2.0.0,>=1.0.23",
    "trio<1.0.0,>=0.25.1",
    "gunicorn<23.0.0,>=22.0.0",
    "httptools<1.0.0,>=0.6.1",
    "multidict<7.0.0,>=6.0.5",
    "cryptography>=43.0.3",
    "cython>=3.0.10",
    "tabulate<1.0.0,>=0.9.0",
    "croniter<3.0.0,>=2.0.5",
    "pendulum<4.0.0,>=3.0.0",
    "jinja2<4.0.0,>=3.1.4",
    "psutil<6.0.0,>=5.9.8",
    "numpy<2.0.0,>=1.26.4",
    "pyparsing<4.0.0,>=3.1.2",
    "lark<2.0.0,>=1.1.9",
    "pydot<3.0.0,>=2.0.0",
    "graphviz<1.0.0,>=0.20.3",
    "pydotplus<3.0.0,>=2.0.2",
    "pyinstrument<5.0.0,>=4.6.2",
    "json-log-formatter<2.0,>=1.0",
    "orjson<4.0.0,>=3.10.3",
    "shortuuid<2.0.0,>=1.0.13",
    "python-magic<1.0.0,>=0.4.27",
    "xpinyin<1.0.0,>=0.7.6",
    "html5lib<2.0,>=1.1",
    "pyjwt<3.0.0,>=2.8.0",
    "django-comment-migrate<1.0.0,>=0.1.7",
    "django-restql<1.0.0,>=0.15.4",
    "django-simple-captcha<1.0.0,>=0.6.0",
    "djangorestframework-simplejwt<6.0.0,>=5.3.1",
    "django-rest-framework-condition<1.0.0,>=0.1.1",
    "ua-parser<1.0.0,>=0.18.0",
    "channels-redis<5.0.0,>=4.2.0",
    "user-agents<3.0.0,>=2.2.0",
    "dvadmin-celery<2.0.0,>=1.0.5",
    "arrow<2.0.0,>=1.3.0",
    "werkzeug<4.0.0,>=3.0.3",
    "bk-iam<2.0.0,>=1.3.6",
    "aiocron<2.0,>=1.8",
    "sanic<24.0.0,>=23.12.1",
    "speaklater<2.0,>=1.3",
    "channels<5.0.0,>=4.1.0",
    "async-timeout<5.0.0,>=4.0.3",
    "daphne<5.0.0,>=4.1.2",
    "cycler<1.0.0,>=0.12.1",
    "idna>=3.7",
    "itsdangerous>=2.2.0",
    "visitor>=0.1.3",
    "fire>=0.6.0",
    "tornado>=6.4.1",
    "airports-py>=1.0.1",
    "pdm>=2.17.3",
    "aiocarbon>=0.15.3",
    "mako>=1.3.6",
    "pycryptodome>=3.21.0",
    "prettytable>=3.12.0",
    "better-exceptions>=0.3.3",
]
keywords = ["xTool"]

[project.urls]
repository = "https://github.com/fengzhongzhu1621/xTool"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "pytest-django>=4.8.0",
    "pyproject-flake8>=7.0.0",
    "black>=24.4.2",
    "isort>=5.13.2",
    "beautifulsoup4<5.0.0,>=4.12.3",
    "coverage<8.0.0,>=7.5.4",
    "mock<6.0.0,>=5.1.0",
    "flake8==7.0.0",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-dotenv<1.0.0,>=0.5.2",
    "pytest-env<2.0.0,>=1.1.3",
    "pytest-html<5.0.0,>=4.1.1",
    "pytest-mock<4.0.0,>=3.14.0",
    "pytest-xdist<4.0.0,>=3.6.1",
    "python-dotenv<2.0.0,>=1.0.1",
    "fakeredis<3.0.0,>=2.23.2",
    "mockredispy<3.0.0,>=2.9.3",
    "xmlrunner<2.0.0,>=1.7.7",
    "openpyxl<4.0.0,>=3.1.4",
    "et-xmlfile<2.0.0,>=1.1.0",
    "pytest-helpers-namespace<2022.0.0,>=2021.12.29",
    "mypy<2.0.0,>=1.10.0",
    "black<25.0.0,>=24.4.2",
    "hypothesis<7.0.0,>=6.102.6",
    "mockafka-py<1.0.0,>=0.1.55",
    "pytest-asyncio>=0.23.7",
]
fast = [
    "uvloop",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
